# routers/user.js
@@ -1,0 +1,8 @@
+import express from "express";
+import { login } from "../controllers/user.js";
+
+const routers = express.Router()
+
+routers.get('/login', login)
+
+export default routers
